[gd_scene load_steps=8 format=3 uid="uid://dukd2mn150ti1"]

[ext_resource type="Script" path="res://scripts/mutation_part.gd" id="1_xbrwj"]
[ext_resource type="Texture2D" uid="uid://dmaj06en0kk08" path="res://assets/tankBird/TankBirdPupil.png" id="2_2vq4h"]
[ext_resource type="Texture2D" uid="uid://bial11bqrxmow" path="res://assets/tankBird/BirdBeak.png" id="2_e1dre"]
[ext_resource type="Texture2D" uid="uid://bidbntqd3ladf" path="res://assets/tankBird/TankBirdEyeWhite.png" id="3_jt46p"]
[ext_resource type="Texture2D" uid="uid://dlc25btw33ur7" path="res://assets/tankBird/BirdEyelid.png" id="4_85u1n"]

[sub_resource type="Curve" id="Curve_4yrby"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.72592, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_kyblx"]
colors = PackedColorArray(0.439049, 0.439049, 0.439049, 1, 1, 1, 1, 0)

[node name="mutationPart" type="Node2D"]
z_index = 2
z_as_relative = false
script = ExtResource("1_xbrwj")

[node name="SnoutPosition" type="Node2D" parent="."]
z_index = 2
z_as_relative = false
position = Vector2(0, -321.419)

[node name="TankBirdNose" type="Sprite2D" parent="SnoutPosition"]
z_index = 2
z_as_relative = false
position = Vector2(-4.10438, 316.494)
texture = ExtResource("2_e1dre")

[node name="CPUParticles2D" type="CPUParticles2D" parent="SnoutPosition"]
z_index = 5
position = Vector2(0, -41)
rotation = -0.785397
scale = Vector2(5, 5)
emitting = false
amount = 25
lifetime = 2.0
direction = Vector2(1, -1)
spread = 80.0
gravity = Vector2(0, -100)
initial_velocity_max = 100.0
angular_velocity_min = -90.0
angular_velocity_max = 90.0
angle_min = -90.0
angle_max = 90.0
scale_amount_min = 60.0
scale_amount_max = 75.0
scale_amount_curve = SubResource("Curve_4yrby")
color = Color(0.367318, 0.348251, 0.32971, 1)
color_ramp = SubResource("Gradient_kyblx")

[node name="TankBirdEyeWhite" type="Sprite2D" parent="."]
z_index = 4
z_as_relative = false
position = Vector2(-6.56701, -15.5967)
texture = ExtResource("3_jt46p")

[node name="BirdEyelid" type="Sprite2D" parent="."]
z_index = 4
z_as_relative = false
position = Vector2(77, -16)
scale = Vector2(0.01, 1.01)
texture = ExtResource("4_85u1n")

[node name="TankBirdPupil" type="Sprite2D" parent="."]
z_index = 4
z_as_relative = false
position = Vector2(144.474, -20.5219)
scale = Vector2(1.20325, 1.20325)
texture = ExtResource("2_2vq4h")
region_enabled = true
region_rect = Rect2(605.068, 309.284, 58.8481, 52.6057)
region_filter_clip_enabled = true
